--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "file-uploader",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
